# GM-PQC-Fusion-Provider

./: Makefile  README-devcontainer.md  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
backup-previous-config-2025-10-01/: Makefile  README-devcontainer.md  docker-compose.yml
backup-previous-config-2025-10-01/.devcontainer/: Dockerfile  devcontainer.json
backup-previous-config-2025-10-01/scripts/: verify_env.sh
examples/: Makefile  README.md  client.c  kem_demo.c  server.c
examples/common/: crypto_ctx.c  crypto_ctx.h  metrics.c  metrics.h  net.c  net.h
gmpqc-openssl/: README.md
gmpqc-openssl/crypto/oqs/: build.info  kex_sm2_mlkem768.c
gmpqc-openssl/include/internal/: oqs_meth.h
gmpqc-openssl/include/openssl/: oqs.h
gmpqc-openssl/ssl/: tls13_kex.c
gmpqc-provider_demo/: CMakeLists.txt  README.md
gmpqc-provider_demo/src/: hybrid_kem.c  keymgmt.c  prov.c
gmpqc-provider_demo/src/internal/: gmpqc_keymgmt.h  hybrid_crypto.c
gmpqc-provider_demo2/: CMakeLists.txt
gmpqc-provider_demo2/src/: prov.c
gmpqc-provider_demo2/src/internal/: hybrid_crypto.h
gmpqc-provider_demo_backup/src/internal/: hybrid_crypto.c  hybrid_crypto.h
hybrid_crypto/: CMakeLists.txt  Design.md  GETTING_STARTED-zh.md  README-zh.md  README.md  TESTING-zh.md
hybrid_crypto/apps/: hybrid_client.c  hybrid_server.c
hybrid_crypto/include/: hybrid_common.h  hybrid_kex.h  hybrid_sig.h
hybrid_crypto/scripts/: tls_benchmark.sh
hybrid_crypto/src/: hybrid_common.c  hybrid_kex.c  hybrid_sig.c
hybrid_crypto/test/: test_main.c
infra/compose/: docker-compose.yml
infra/scripts/: verify_env.sh
scripts/: verify_env.sh
